--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -100,8 +100,8 @@
 
 @article{Khristoforova:23,
    author = {Khristoforova, Evgeniia},
-   title = {Subject agreement in control and modal constructions in Russian Sign Language: Implications for the hierarchy of person features"} 
-   journal= {Sign Language & Linguistics},
+   title = {Subject agreement in control and modal constructions in Russian Sign Language: Implications for the hierarchy of person features},
+   journal= {Sign Language \& Linguistics},
    year = {2023},
    volume = {26},
    number = {1},
@@ -659,6 +659,41 @@
     editor =    {Suet-Ying Lam and Satoru Ozaki},
     url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
     abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
+}
+
+@unpublished{oomen:23c,
+  author = {Oomen, Marloes and Santoro, Mirko and Geraci, Carlo},
+  title = {Some properties of Neg-raising in three sign languages},
+  year = {Forthc.},
+  url = {https://www.signlab-amsterdam.nl/publications/FEAST_2023_Neg_raising_in_three_sign_languages.pdf},
+  keywords = {Neg-raising, Negative Polarity Items, Negative quantifiers, Headshake},
+  abstract = {Neg-raising, the phenomenon whereby a negation in the main clause of a complex construction is interpreted as if belonging to the embedded clause, has been intensively studied in spoken languages. The same cannot be said for sign languages. In this paper, we investigate the properties of Neg-raising constructions in three sign languages: French Sign Language, Italian Sign Language, and Sign Language of the Netherlands. We report on two syntactic tests we applied to disambiguate Neg-raising and non-Neg-raising readings, showing that Neg-raising constructions have similar properties in the three sign languages that we studied, as well as in comparable constructions in spoken languages. We also discuss some intricate headshake spreading patterns we found in Neg-raising constructions in Sign Language of the Netherlands, a non-manual dominant sign language.},
+  note = {Publication forthcoming in FEAST 2023 proceedings.}
+}
+
+@inproceedings{neijman:22,
+  author = {Marise Neijman and Femke Hof and Noelle Oosterom and Roland Pfau and Bertus {van Rooy} and Rob J.J.H. {van Son} and Michiel M.W.M. {van den Brekel}},
+  title = {{Compensation in Verbal and Nonverbal Communication after Total Laryngectomy}},
+  year = {2022},
+  booktitle = {Proc. Interspeech 2022},
+  pages = {3613--3617},
+  doi = {10.21437/Interspeech.2022-369},
+  url = {https://www.isca-speech.org/archive/interspeech_2022/neijman22_interspeech.html},
+  abstract = {Total laryngectomy is a major surgical procedure with life-changing consequences. As a result of the surgery, the upper and lower airways are disconnected, the natural voice is lost, and patients breathe through a tracheostoma in the neck. Tracheoesophageal speech is the most common speech rehabilitation technique. Due to the lack of air volume, and the amount of muscle tension in the esophagus, some patients may suffer from a hyper- or hypo-tonic voice, resulting in less intelligible speech. To communicate as intelligibly as possible, patients likely adapt their verbal and nonverbal communication to their physical disabilities. The current study aimed to explore the compensation techniques in verbal and nonverbal communication after total laryngectomy focusing on the complexity of grammar and the use of co-speech gestures. We analyzed previously obtained interviews of eight laryngectomized women on the syntactic complexity in speech and the use and type of co-speech gestures. Results were compared with analyses of productions by healthy controls. We found that laryngectomized women reduce the syntactic complexity of their speech, and use nonverbal gestures in their communication. Further research is needed with systematically obtained data and more suitable match-groups. Index Terms: total laryngectomy, communication, speech, co-speech gestures, grammar, compensation}
+}
+
+@Inbook{Rodrigues:23,
+author = {Rodrigues, Ang{\'e}lica and Pfau, Roland},
+editor = {Massini-Cagliari, Gladis and Berlinck, Rosane Andrade and Rodrigues, Angelica},
+title = {Language Prejudice and Language Structure: On Missing and Emerging Conjunctions in Libras and Other Sign Languages},
+bookTitle = {Understanding Linguistic Prejudice: Critical Approaches to Language Diversity in Brazil},
+year = {2023},
+publisher = {Springer International Publishing},
+pages = {157--185},
+isbn = {978-3-031-25806-0},
+doi = {10.1007/978-3-031-25806-0_10},
+url = {https://doi.org/10.1007/978-3-031-25806-0_10},
+abstract = {Sign languages, just like many indigenous languages, have traditionally been subject to language prejudice and suppression, based in no small part on invalid claims about their structural complexity. In this chapter, we aim to contribute to the discussion on language prejudice by broadening the scope to include deaf communities and their sign languages. We review and reject claims according to which languages can be classified as ``primitive'' or ``evolved'' based on the absence of certain grammatical categories. One such grammatical category are conjunctions, and we investigate in some detail their absence or presence in sign languages. We present examples from various sign languages which show that -- just as in spoken languages -- conjunctions may emerge through diachronic processes of borrowing and grammaticalization. Focusing on data from Brazilian Sign Language, we then demonstrate that both these processes are at play in the language and that manual conjunctions marking disjunctive, adversative, conditional, and causal relations have entered the lexicon. Our hope is that these findings will contribute -- albeit modestly -- to the status of Brazilian Sign Language.}
 }
 
 @article{motamedi:22,
