--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -634,11 +634,11 @@
 @unpublished{esselink:23d,
   author = {Esselink, Lyke and Roelofsen, Floris and Dotla{\v{c}}il, Jakub and Mende-Gillings, Shani and Meulder, Maartje de and Sijm, Nienke and Smeijers, Anika},
   title = {Exploring automatic text-to-sign translation in a healthcare setting},
-  year =      {Forthc.},
+  year =      {2023},
   keywords = {manuscript},
   url = {https://www.signlab-amsterdam.nl/publications/Esselink22.pdf},
   abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.},
-  note = {Unpublished.}
+  note = {Publication forthcoming in Universal Access in the Information Society.}
 }
 
 @unpublished{oomen:23a,
@@ -653,18 +653,19 @@
 
 @incollection{oomen:23b,
     author =    {Marloes Oomen and Lyke Esselink and Tobias de Ronde and Floris Roelofsen},
-    year =      {Forthc.},
+    year =      {2023},
     title =     {First steps towards a procedure for annotating non-manual markers in sign languages},
     booktitle = {NELS53 Proceedings},
     editor =    {Suet-Ying Lam and Satoru Ozaki},
     url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
-    abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
+    abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.},
+    note = {Publication forthcoming in NELS 2023 proceedings.}
 }
 
 @unpublished{oomen:23c,
   author = {Oomen, Marloes and Santoro, Mirko and Geraci, Carlo},
   title = {Some properties of Neg-raising in three sign languages},
-  year = {Forthc.},
+  year = {2023},
   url = {https://www.signlab-amsterdam.nl/publications/FEAST_2023_Neg_raising_in_three_sign_languages.pdf},
   keywords = {Neg-raising, Negative Polarity Items, Negative quantifiers, Headshake},
   abstract = {Neg-raising, the phenomenon whereby a negation in the main clause of a complex construction is interpreted as if belonging to the embedded clause, has been intensively studied in spoken languages. The same cannot be said for sign languages. In this paper, we investigate the properties of Neg-raising constructions in three sign languages: French Sign Language, Italian Sign Language, and Sign Language of the Netherlands. We report on two syntactic tests we applied to disambiguate Neg-raising and non-Neg-raising readings, showing that Neg-raising constructions have similar properties in the three sign languages that we studied, as well as in comparable constructions in spoken languages. We also discuss some intricate headshake spreading patterns we found in Neg-raising constructions in Sign Language of the Netherlands, a non-manual dominant sign language.},
