--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -683,18 +683,18 @@
   abstract = {Total laryngectomy is a major surgical procedure with life-changing consequences. As a result of the surgery, the upper and lower airways are disconnected, the natural voice is lost, and patients breathe through a tracheostoma in the neck. Tracheoesophageal speech is the most common speech rehabilitation technique. Due to the lack of air volume, and the amount of muscle tension in the esophagus, some patients may suffer from a hyper- or hypo-tonic voice, resulting in less intelligible speech. To communicate as intelligibly as possible, patients likely adapt their verbal and nonverbal communication to their physical disabilities. The current study aimed to explore the compensation techniques in verbal and nonverbal communication after total laryngectomy focusing on the complexity of grammar and the use of co-speech gestures. We analyzed previously obtained interviews of eight laryngectomized women on the syntactic complexity in speech and the use and type of co-speech gestures. Results were compared with analyses of productions by healthy controls. We found that laryngectomized women reduce the syntactic complexity of their speech, and use nonverbal gestures in their communication. Further research is needed with systematically obtained data and more suitable match-groups. Index Terms: total laryngectomy, communication, speech, co-speech gestures, grammar, compensation}
 }
 
-@Inbook{Rodrigues:23,
-author = {Rodrigues, Ang{\'e}lica and Pfau, Roland},
-editor = {Massini-Cagliari, Gladis and Berlinck, Rosane Andrade and Rodrigues, Angelica},
-title = {Language Prejudice and Language Structure: On Missing and Emerging Conjunctions in Libras and Other Sign Languages},
-bookTitle = {Understanding Linguistic Prejudice: Critical Approaches to Language Diversity in Brazil},
-year = {2023},
-publisher = {Springer International Publishing},
-pages = {157--185},
-isbn = {978-3-031-25806-0},
-doi = {10.1007/978-3-031-25806-0_10},
-url = {https://doi.org/10.1007/978-3-031-25806-0_10},
-abstract = {Sign languages, just like many indigenous languages, have traditionally been subject to language prejudice and suppression, based in no small part on invalid claims about their structural complexity. In this chapter, we aim to contribute to the discussion on language prejudice by broadening the scope to include deaf communities and their sign languages. We review and reject claims according to which languages can be classified as ``primitive'' or ``evolved'' based on the absence of certain grammatical categories. One such grammatical category are conjunctions, and we investigate in some detail their absence or presence in sign languages. We present examples from various sign languages which show that -- just as in spoken languages -- conjunctions may emerge through diachronic processes of borrowing and grammaticalization. Focusing on data from Brazilian Sign Language, we then demonstrate that both these processes are at play in the language and that manual conjunctions marking disjunctive, adversative, conditional, and causal relations have entered the lexicon. Our hope is that these findings will contribute -- albeit modestly -- to the status of Brazilian Sign Language.}
+@incollection{Rodrigues:23,
+  author = {Rodrigues, Ang{\'e}lica and Pfau, Roland},
+  editor = {Massini-Cagliari, Gladis and Berlinck, Rosane Andrade and Rodrigues, Angelica},
+  title = {Language Prejudice and Language Structure: On Missing and Emerging Conjunctions in Libras and Other Sign Languages},
+  bookTitle = {Understanding Linguistic Prejudice: Critical Approaches to Language Diversity in Brazil},
+  year = {2023},
+  publisher = {Springer International Publishing},
+  pages = {157--185},
+  isbn = {978-3-031-25806-0},
+  doi = {10.1007/978-3-031-25806-0_10},
+  url = {https://doi.org/10.1007/978-3-031-25806-0_10},
+  abstract = {Sign languages, just like many indigenous languages, have traditionally been subject to language prejudice and suppression, based in no small part on invalid claims about their structural complexity. In this chapter, we aim to contribute to the discussion on language prejudice by broadening the scope to include deaf communities and their sign languages. We review and reject claims according to which languages can be classified as ``primitive'' or ``evolved'' based on the absence of certain grammatical categories. One such grammatical category are conjunctions, and we investigate in some detail their absence or presence in sign languages. We present examples from various sign languages which show that -- just as in spoken languages -- conjunctions may emerge through diachronic processes of borrowing and grammaticalization. Focusing on data from Brazilian Sign Language, we then demonstrate that both these processes are at play in the language and that manual conjunctions marking disjunctive, adversative, conditional, and causal relations have entered the lexicon. Our hope is that these findings will contribute -- albeit modestly -- to the status of Brazilian Sign Language.}
 }
 
 @article{motamedi:22,
