--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -673,7 +673,7 @@
 }
 
 @inproceedings{neijman:22,
-  author = {Marise Neijman and Femke Hof and Noelle Oosterom and Roland Pfau and Bertus {van Rooy} and Rob J.J.H. {van Son} and Michiel M.W.M. {van den Brekel}},
+  author = {Neijman, Marise and Hof, Femke and Oosterom, Noelle and Pfau, Roland and Rooy, Bertus van and Son, Rob J.J.H. van and Brekel, Michiel M.W.M. van den},
   title = {{Compensation in Verbal and Nonverbal Communication after Total Laryngectomy}},
   year = {2022},
   booktitle = {Proc. Interspeech 2022},
