--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -390,6 +390,36 @@
   abstract = {Public transport organisations, such as Dutch railway operator Nederlandse Spoorwegen (NS), generally communicate important messages through spoken announcements in the train or station. As a result, Deaf people miss crucial information. Because of varying levels of reading proficiency, textual information is not always a solution. Moreover, video footage is not scalable and will not yield satisfactory results when individual video parts need an update. Virtual sign language avatars can provide consistent, anonymous and scalable translations. For the development of a comprehensible and fluent sign language avatar, collaboration between experts in language technology, avatar technology and sign language is fundamental. Unfortunately, inclusive approaches are not evident in existing technologies. To address these problems, we present a case study on co-designing a sign language avatar for the automatic translation of railway announcements into Sign Language of the Netherlands (NGT). For the initial design, video sign language translations of NS announcements created by the Dutch Sign Center were annotated and used for the translation basis. A scripted keyframe animation technique for the JASigning avatar engine makes it possible to efficiently create many variants of a given template, without expensive equipment. Three iterative co-design sessions took place with an interdisciplinary research team including deaf sign language experts. Simultaneously, hearing passengers from NS were consulted for additional remarks on the sign language avatar. Subsequently, multiple phrase variants of the system were evaluated within a diverse focus group audience to account for demographic differences. Combining the various disciplines led to mayor adjustments of the avatar (manual movements, facial expressions, mouthing, grammar, transitions between signs, camera angle and speed). With this case study, we aimed to effectively and inclusively develop sign language avatar technology. More research and focus groups are necessary to ensure high quality translations (improved mouthings, facial expressions and prosody), resulting in enhanced comprehensibility and natural appearance of the avatar.}
 }
 
+@unpublished{morking:23,
+  title = {{Agent-Backgrounding in Sign Language of the Netherlands: A Corpus Investigation}},
+  author = {M{\"o}rking, Anna-Lina},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Morking_thesis.pdf},
+  keywords = {bachelorsthesis},
+  abstract = {In agent-backgrounding constructions the causer of a linguistic event is pushed out of the focus, that is, it is backgrounded. In this thesis, for the first time, agent-backgrounding strategies were researched in Sign Language of the Netherlands (NGT). This is a corpus-based investigation on impersonalisation strategies such as impersonal uses of personal pronouns (ex. you), dedicated referentially deficient pronouns (ex. someone), and valency-reducing operations (ex. passive constructions). The results confirm that many of the same strategies are used in NGT as in other spoken and sign languages. These findings are highly relevant, as agent-backgrounding has not previously been researched in NGT, so our study fiills an important gap in the literature.},
+  note = {Bachelor's thesis, University of Amsterdam.}
+}
+
+@mastersthesis{vachaudez:23,
+  title = {Analyzing the ZELF and other reflexive constructions in Sign Language of the Netherlands from a Functional Discourse Grammar perspective: a corpus- based typological and theoretical study},
+  author = {Vachaudez, Sybil},
+  school = {University of Amsterdam},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Vachaudez_thesis.pdf},
+  abstract = {This paper presents the first corpus-based study of reflexivity in Sign Language of the Netherlands (henceforth, NGT) and the first study of reflexivity in a sign language from a Functional Discourse Grammar perspective. Importantly, seven reflexive constructions were identified in NGT: i) ZELF constructions with a pronominal pointing sign, ii) ZELF constructions without a pronominal sign, iii) constructions with a reflexivized agreeing verb, iv) constructions with a reflexivized agreeing verb and a pronominal pointing sign, v) EIGEN constructions, vi) constructions with a pronominal pointing sign and vii) constructions with object omission. I argue that the first five constitute specialized reflexive constructions and show that the Functional Discourse Grammar model can successfully account for reflexivity in sign languages and that NGT possesses all three types of reflexive constructions proposed by the model: two-place reflexives, one-place reflexives, and mixed reflexives. Furthermore, two non- reflexive uses of ZELF were found: the possessive use and the anticausative use. I conclude by locating the NGT data within the landscape of reflexivity in both signed and spoken languages, commenting on the cognitive saliency of reflexivity and event participant structure, and raising questions for future research. The data for this study comes from Corpus NGT.},
+  keywords={Sign Language of the Netherlands (NGT), reflexives, typology, Functional Discourse Grammar, pragmatics-semantics-syntax interfaces, sign language linguistics}
+}
+
+@mastersthesis{joosten:23,
+  title = {Giving a sign to the next generation: a corpus study of the grammaticalization of GIVE in Sign Language of the Netherlands (NGT)},
+  author = {Joosten, Vivianne Sylvana},
+  school = {University of Amsterdam},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Joosten_thesis.pdf},
+  abstract = {The transfer verb GIVE is a fruitful base for metaphorical extension and grammaticalization across languages. Previous work by Bos (1996/2016) and Couvee and Pfau (2018) has shown that the sign GIVE is used beyond its underlying concrete transfer meaning in sign language of the Netherlands (NGT) as well. In this corpus study, I find GIVE in NGT to be used in a prototypical concrete transfer meaning in fewer than 30\% of the instances. Other uses attested in the corpus include (i) abstract transfer of linguistic type items such as INFORMATION, (ii) light verb use as well as serial verb use where GIVE marks a RECIPIENT rather than describing the transfer action, (iii) used in a causative construction and (iv) passive auxiliary use. I propose two different grammaticalization paths of GIVE in NGT, as well as evaluating NGT GIVE in a typological context. Extensions of GIVE all have a RECIPIENT-focus in NGT and are comparable to the extensions of GIVE found in other languages, both spoken and signed.},
+  keywords={Grammaticalization, Typology, GIVE, Sign Language of the Netherlands (NGT), Corpus}
+}
+
 @unpublished{Jeu:22,
   title = {Using avatar animation software for sign language synthesis},
   author = {Jeu, Roel de},
