--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -391,7 +391,7 @@
 }
 
 @unpublished{morking:23,
-  title = {{Agent-Backgrounding in Sign Language of the Netherlands: A Corpus Investigation}},
+  title = {Agent-Backgrounding in Sign Language of the Netherlands: A Corpus Investigation},
   author = {M{\"o}rking, Anna-Lina},
   year = {2023},
   url = {https://www.signlab-amsterdam.nl/publications/Morking_thesis.pdf},
@@ -406,8 +406,7 @@
   school = {University of Amsterdam},
   year = {2023},
   url = {https://www.signlab-amsterdam.nl/publications/Vachaudez_thesis.pdf},
-  abstract = {This paper presents the first corpus-based study of reflexivity in Sign Language of the Netherlands (henceforth, NGT) and the first study of reflexivity in a sign language from a Functional Discourse Grammar perspective. Importantly, seven reflexive constructions were identified in NGT: i) ZELF constructions with a pronominal pointing sign, ii) ZELF constructions without a pronominal sign, iii) constructions with a reflexivized agreeing verb, iv) constructions with a reflexivized agreeing verb and a pronominal pointing sign, v) EIGEN constructions, vi) constructions with a pronominal pointing sign and vii) constructions with object omission. I argue that the first five constitute specialized reflexive constructions and show that the Functional Discourse Grammar model can successfully account for reflexivity in sign languages and that NGT possesses all three types of reflexive constructions proposed by the model: two-place reflexives, one-place reflexives, and mixed reflexives. Furthermore, two non- reflexive uses of ZELF were found: the possessive use and the anticausative use. I conclude by locating the NGT data within the landscape of reflexivity in both signed and spoken languages, commenting on the cognitive saliency of reflexivity and event participant structure, and raising questions for future research. The data for this study comes from Corpus NGT.},
-  keywords={Sign Language of the Netherlands (NGT), reflexives, typology, Functional Discourse Grammar, pragmatics-semantics-syntax interfaces, sign language linguistics}
+  abstract = {This paper presents the first corpus-based study of reflexivity in Sign Language of the Netherlands (henceforth, NGT) and the first study of reflexivity in a sign language from a Functional Discourse Grammar perspective. Importantly, seven reflexive constructions were identified in NGT: i) ZELF constructions with a pronominal pointing sign, ii) ZELF constructions without a pronominal sign, iii) constructions with a reflexivized agreeing verb, iv) constructions with a reflexivized agreeing verb and a pronominal pointing sign, v) EIGEN constructions, vi) constructions with a pronominal pointing sign and vii) constructions with object omission. I argue that the first five constitute specialized reflexive constructions and show that the Functional Discourse Grammar model can successfully account for reflexivity in sign languages and that NGT possesses all three types of reflexive constructions proposed by the model: two-place reflexives, one-place reflexives, and mixed reflexives. Furthermore, two non- reflexive uses of ZELF were found: the possessive use and the anticausative use. I conclude by locating the NGT data within the landscape of reflexivity in both signed and spoken languages, commenting on the cognitive saliency of reflexivity and event participant structure, and raising questions for future research. The data for this study comes from Corpus NGT.}
 }
 
 @mastersthesis{joosten:23,
@@ -416,8 +415,7 @@
   school = {University of Amsterdam},
   year = {2023},
   url = {https://www.signlab-amsterdam.nl/publications/Joosten_thesis.pdf},
-  abstract = {The transfer verb GIVE is a fruitful base for metaphorical extension and grammaticalization across languages. Previous work by Bos (1996/2016) and Couvee and Pfau (2018) has shown that the sign GIVE is used beyond its underlying concrete transfer meaning in sign language of the Netherlands (NGT) as well. In this corpus study, I find GIVE in NGT to be used in a prototypical concrete transfer meaning in fewer than 30\% of the instances. Other uses attested in the corpus include (i) abstract transfer of linguistic type items such as INFORMATION, (ii) light verb use as well as serial verb use where GIVE marks a RECIPIENT rather than describing the transfer action, (iii) used in a causative construction and (iv) passive auxiliary use. I propose two different grammaticalization paths of GIVE in NGT, as well as evaluating NGT GIVE in a typological context. Extensions of GIVE all have a RECIPIENT-focus in NGT and are comparable to the extensions of GIVE found in other languages, both spoken and signed.},
-  keywords={Grammaticalization, Typology, GIVE, Sign Language of the Netherlands (NGT), Corpus}
+  abstract = {The transfer verb GIVE is a fruitful base for metaphorical extension and grammaticalization across languages. Previous work by Bos (1996/2016) and Couvee and Pfau (2018) has shown that the sign GIVE is used beyond its underlying concrete transfer meaning in sign language of the Netherlands (NGT) as well. In this corpus study, I find GIVE in NGT to be used in a prototypical concrete transfer meaning in fewer than 30\% of the instances. Other uses attested in the corpus include (i) abstract transfer of linguistic type items such as INFORMATION, (ii) light verb use as well as serial verb use where GIVE marks a RECIPIENT rather than describing the transfer action, (iii) used in a causative construction and (iv) passive auxiliary use. I propose two different grammaticalization paths of GIVE in NGT, as well as evaluating NGT GIVE in a typological context. Extensions of GIVE all have a RECIPIENT-focus in NGT and are comparable to the extensions of GIVE found in other languages, both spoken and signed.}
 }
 
 @unpublished{Jeu:22,
