--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -140,6 +140,32 @@
   abstract = {This chapter discusses the terminology commonly used in the information structure literature: in particular, topic, focus, contrast, and emphasis. An important component of our discussion is the impact of the visual-gestural modality on the syntactic and prosodic encoding of information structure. Kimmelman argued that in RSL and NGT, doubling is also used for information structure-related functions, but proposed that the functions of doubling are better described as foregrounding. Information structure is a field of linguistics covered in numerous books and articles. Information structure in sign languages has also been investigated almost from the first days of sign linguistics; however, as is often the case, most of the available studies focus on a very small number of sign languages, and among these, American Sign Language is the one most prominently represented. The chapter aims to theoretical research, It discusses the few available experimental or psycholinguistic studies on information structure in sign languages.}
 }
 
+@incollection{Burkova:23,
+  title = {Syntactic functions of nonmanuals in Russian Sign Language},
+  author = {Burkova, Svetlana and Khristoforova, Evgeniia and Kimmelman, Vadim},
+  publisher={John Benjamins Publishing Company},
+  booktitle = {Advances in sign language corpus linguistics},
+  pages = {90--122},
+  year = {2023},
+  url = {https://doi.org/10.1075/scl.108.04bur},
+  doi = {10.1075/scl.108.04bur},
+  keywords = {Russian Sign Language, Nonmanuals, Questions, Topics, Conditionals, Concessives},
+  abstract = {This chapter presents the Russian Sign Language (RSL) Corpus and demonstrates its capabilities as a research tool by summarizing three corpus-based studies primarily focused on syntactic functions of nonmanual markers. The first study considers question marking in regular wh-questions and in question-answer pairs. It shows that the two constructions have very different nonmanual markers. The second study analyzes marking of topics in RSL, and shows that nonmanual markers of topics are typologically common, but are infrequent in naturalistic corpus data. The third study investigates conditional and concessive constructions in RSL. It demonstrates that these constructions make extensive and frequent use of nonmanual markers, but that no single marker is specialized for the function of expressing conditional or concessive meaning. Instead, complex combinations of multiple markers are employed in these constructions. All three studies also contribute to sign language typology by providing novel descriptions of syntactic and discourse phenomena in RSL.}
+}
+
+@article{Khristoforova:20,
+  title = {Syntax of relativization in Russian Sign Language: Basic features},
+  author = {Khristoforova, Evgeniia and Kimmelman, Vadim},
+  journal={Voprosy Jazykoznanija},
+  volume={6},
+  pages = {48--65},
+  year = {2020},
+  url = {https://doi.org/10.31857/0373-658X.2020.6.48-65},
+  doi = {10.31857/0373-658X.2020.6.48-65},
+  keywords = {Relative constructions, Russian Sign Language, sign languages},
+  abstract = {This paper provides a first syntactic description of relativization in Russian Sign Language (RSL). We collected production data from nine signers performing a picture-based task. The signers produced 88 instances of relative constructions with the head noun being the subject or direct object in the main clause and in the relative clause. We found that RSL has head-external (postnominal) relative clauses, head-internal relative clauses, and double-headed relative clauses. Relative clauses might also be extra-posed to the sentence-final position or fronted. The main clause may be doubled, so that a part of it is repeated after the relative clause. Relative clauses might contain optional relative elements WHICH and INDEX, in clause-initial or clause-final position, or in both positions, and the two elements can co-occur. Finally, we found that relative clauses are nearly always prosodically separate from the main clause. The most frequent non-manual markers in relative construction are eye blinks; in addition, head leans and turns, eyebrow raise, and squints are sometimes used. However, no marker is specialized for marking the relative clause itself: they either are simply markers of boundaries of prosodic units (eye blinks), or they have some other functions (which we cannot fully identify yet). We conclude that RSL generally fits patterns found in other spoken and signed languages. However, we also observe specific differences, especially in the domain of non-manual marking.}
+}
+
 @phdthesis{klomp:21,
   title = {A descriptive grammar of Sign Language of the Netherlands},
   author = {Klomp, Ulrika},
@@ -876,4 +902,41 @@ year = {2022},
 doi = {10.1075/sll.00069.vei},
 abstract = {The category of person encodes the semantic distinction between discourse roles, and number specifies the numerosity of the referents. While these are two basic grammatical categories of human languages, they have not yet been documented in detail in many sign languages. This dissertation provides the first in-depth analysis of person and number in Catalan Sign Language (LSC) pronouns. To a lesser extent, the form and interpretation of number in nouns is also addressed. The dissertation takes a descriptive approach, but it also offers formal arguments to account for the interpretation of person and number markers. Besides, the results are contrasted with prior findings from signed and spoken languages to determine whether LSC complies with the tendencies documented in the two cat- egories across the world’s languages.
 Drawing on a combination of elicited and corpus data analysis, this study shows that person and number in LSC are formally marked through a set of dis- tinctive phonological features: person is encoded through spatial features, and number by the path specifications of the sign. Further, this thesis demonstrates that person marking has an influence on the meaning of certain number mor- phemes. Thus, the same morphological operation might yield different interpre- tations depending on the person features with which it is combined.}
+}
+
+@inproceedings{veigabusto:23a,
+  title = {The indefinite-interrogative affinity in sign languages: the case of Catalan Sign Language},
+  author = {Veiga Busto, Raquel and Roelofsen, Floris and Navarrete González, Alexandra},
+  booktitle = {Proceedings of the 4th Workshop on Inquisitiveness Below and Beyond the Sentence Boundary (InqBnB4)},
+  year = {2023},
+  pages={50--60},
+  publisher = {Association for Computational Linguistics},
+  url = {https://iwcs2023.loria.fr/files/2023/06/inqbnb4_proceedings.pdf},
+  abstract = {Prior studies on spoken languages have shown that indefinite and interrogative pronouns may be formally very similar. Our research aims to understand if sign languages exhibit this type of affinity. This paper presents an overview of the phenomenon and reports on the results of two studies: a cross-linguistic survey based on a sample of 30 sign languages and an empirical investigation conducted with three deaf consultants of Catalan Sign Language (LSC). Our research shows that, in sign languages, certain signs have both existential and interrogative readings and it identifies the environments that make existential interpretations available in LSC.}
+}
+
+@book{veigabusto:23b,
+title = {Person and Number. An Empirical Study of Catalan Sign Language Pronouns},
+author = {Veiga Busto, Raquel},
+publisher = {De Gruyter Mouton},
+address = {Berlin, Boston},
+url = {https://doi.org/10.1515/9783110988956},
+doi = {doi:10.1515/9783110988956},
+isbn = {9783110988956},
+year = {2023},
+keywords={Catalan Sign Language, Llengua de Signes Catalana, Person (Grammar), Number (Grammar)},
+abstract={Person and number are two basic grammatical categories. However, they have not yet been exhaustively documented in many sign languages. This volume presents a thorough description of the form and interpretation of person and number in Catalan Sign Language (LSC) personal pronouns. This is the first book exploring together the two categories (and their interaction) in a sign language.
+Building on a combination of elicitation methods and corpus data analysis, this book shows that person and number are encoded through a set of distinctive phonological features: person is formally marked through spatial features, and number by the path specifications of the sign. Additionally, this study provides evidence that the same number marker might have a different semantic import depending on the person features with which it is combined.
+Results of this investigation contribute fresh data to cross-linguistic studies on person and number, which are largely based on evidence from spoken language only. Furthermore, while this research identifies a number of significant differences with respect to prior descriptions of person and number in other sign languages, it also demonstrates that, from a typological standpoint, the array of distinctions that LSC draws within each category is not exceptional.}
+}
+
+@incollection{veigabusto:23c,
+  title = {Intérprete de lengua de signos},
+  author = {Veiga Busto, Raquel},
+  publisher = {Editorial Síntesis},
+  booktitle = {Lingüistas de hoy. Profesiones para el siglo XXI},
+  editor={Queralt Estévez (coord.), Sheila},
+  pages = {117--122},
+  year = {2023},
+  url = {https://www.sintesis.com/claves%20de%20la%20ling%C3%BC%C3%ADstica-200/ling%C3%BCistas%20de%20hoy-ebook-3113.html}
 }
