--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -21,6 +21,19 @@
   abstract = {This article reports the results of the first longitudinal study that systematically investigates the acquisition of verb agreement by hearing learners of a sign language. During a 2-year period, 14 novel learners of Sign Language of the Netherlands (NGT) with a spoken language background performed an elicitation task 15 times. Seven deaf native signers and NGT teachers performed the same task to serve as a benchmark group. The results obtained show that for some learners, the verb agreement system of NGT was difficult to master, despite numerous examples in the input. As compared to the benchmark group, learners tended to omit agreement markers on verbs that could be modified, did not always correctly use established locations associated with discourse referents, and made characteristic errors with respect to properties that are important in the expression of agreement (movement and orientation). The outcomes of the study are of value to practitioners in the field, as they are informative with regard to the nature of the learning process during the first stages of learning a sign language.}
 }
 
+@incollection{pfau:23,
+  title = {Morphology in sign languages: Theoretical issues and typological contrasts. },
+  author = {Pfau, Roland and Steinbach, Markus},
+  publisher={Oxford: Wiley Blackwell},
+  booktitle = {The Wiley Blackwell companion to morphology},
+  editor = {Ackema, Peter and Bendjaballah, Sabrina and Bonet, Eulàlia and Fábregas, Antonio},
+  pages = {1--37},
+  year = {2023},
+  url = {https://www.signlab-amsterdam.nl/publications/Pfau_Steinbach_2023_Wiley.pdf},
+  doi = {10.1002/9781119693604.morphcom048},
+  keywords = {Morphology}
+}
+
 @article{boven:21a,
   title = {Phonological restrictions on nominal pluralization in Sign Language of the Netherlands: evidence from corpus and elicited data},
   author = {Boven, Cindy van},
