--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -111,7 +111,7 @@
   abstract = {We describe basic morphosyntactic and semantic properties of question-answer pairs(QAPs) collected from the online corpus of Russian Sign Language (RSL). We identified two classes of QAPs: classical and discourse QAPs, which are different in the semantic relation between the question and answer parts. We discovered that non-manual marking and word order in both types of QAPs are different from other constructions involving wh-signs, namely regular questions and free relative clauses. Guided by the similarity between non-manual marking of QAPs and role shift marking, we hypothesize on a possible grammaticalization process connecting the two constructions}
 }
 
-@article{Khristoforova:23,
+@article{Khristoforova:23a,
    author = {Khristoforova, Evgeniia},
    title = {Subject agreement in control and modal constructions in Russian Sign Language: Implications for the hierarchy of person features},
    journal= {Sign Language \& Linguistics},
@@ -127,6 +127,28 @@
    keywords = {Sign language, Person feature, Finiteness, Control clause, Complement clause, Russian Sign Language, Verbal agreement},
    abstract = {The present research combines three fields of inquiry in sign language linguistics: verbal agreement, person features, and syntactic complexity. These topics have previously been addressed in isolation, but little is known about their interaction. This study attempts to fill this gap by investigating subject agreement in complement clauses in Russian Sign Language. By means of corpus investigation and grammaticality judgments, I found that subject agreement in clausal complements of the control predicates <span class="jp-small">try, love, want, begin</span>, and modal <span class="jp-small">can</span> may be deficient – in particular, it can be reduced to the forms identical to first-person marking even in the case of a third-person subject controller. Deficient subject agreement in complement clauses is thus reminiscent of non-finite verbal forms in spoken languages. I further argue that the choice of first-person forms in deficient agreement reveals a default status of first person in sign languages, which is consistent with proposals regarding the modality-specific properties of first-person reference in these languages.},
   }
+
+@incollection{Khristoforova:23b,
+    author =    {Khristoforova, Evgeniia},
+    year =      {2023},
+    title =     {The Implicational Complementation Hierarchy and size restructuring in the Sign Language of the Netherlands},
+    booktitle = {Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society},
+    editor =    {Suet-Ying Lam and Satoru Ozaki},
+    url = {https://www.signlab-amsterdam.nl/publications/Khristoforova_NELS53_2023.pdf},
+    volume = {2},
+    pages = {119}
+}
+
+@article{Khristoforova:23c, 
+    title={Indexicals under role shift in Sign Language of the Netherlands}, 
+    volume={5}, 
+    url={https://raco.cat/index.php/FEAST/article/view/422436}, 
+    DOI={10.31009/FEAST.i5.06}, 
+    journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
+    author={Khristoforova, Evgeniia and David, Blunier}, 
+    year={2023}, 
+    pages={63-75} 
+}
 
 @article{kimmelman:20,
   title = {Argument structure of classifier predicates in Russian Sign Language},
@@ -722,11 +744,10 @@
     author =    {Marloes Oomen and Lyke Esselink and Tobias de Ronde and Floris Roelofsen},
     year =      {2023},
     title =     {First steps towards a procedure for annotating non-manual markers in sign languages},
-    booktitle = {NELS53 Proceedings},
+    booktitle = {Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society},
     editor =    {Suet-Ying Lam and Satoru Ozaki},
     url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
-    abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.},
-    note = {Publication forthcoming in NELS 2023 proceedings.}
+    abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
 }
 
 @unpublished{oomen:23c,
